--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <a href="product1.html">
                         <div class="product-card">
                             <img src="img/Bed-Room.jpeg" alt="Product 1">
-                            <h4>Customize Name Neon Sign Board</h4>
+                            <h4>Neon Sign Board</h4>
                             <div class="rating">
                                 <i class="fas fa-star">
                                 </i>
@@ -264,24 +264,24 @@
             <div class="features">
                 <div class="col-sm-12 feature-main">
                     <div class="col-sm-6 feature-respo-main">
-                        <div class="feature">
+                        <div class="feature world-class">
                             <img src="img/why_bg_one.avif" alt="">
                             <i class="fas fa-award"></i>
                             <p>Two year warranty</p>
                         </div>
-                        <div class="feature">
+                        <div class="feature world-class">
                             <img src="img/why_bg_two.avif" alt="">
                             <i class="fas fa-shipping-fast"></i>
                             <p>Free + Fast shipping</p>
                         </div>
                     </div>
                     <div class="col-sm-6 feature-respo-main">
-                        <div class="feature">
+                        <div class="feature world-class">
                             <img src="img/why_bg_one.avif" alt="">
                             <i class="fas fa-gem"></i>
                             <p>Premium quality</p>
                         </div>
-                        <div class="feature">
+                        <div class="feature world-class">
                             <img src="img/why_bg_three.avif" alt="">
                             <i class="fas fa-bolt"></i>
                             <p>Power-efficient</p>
