--- a/index.html
+++ b/index.html
@@ -1173,23 +1173,28 @@
                                 <div class="links">
                                     <ul class="menu">
                                         <li>Home</li>
-                                        <li>About Us</li>
-                                        <li>Services</li>
+                                        <li>Customize</li>
+                                        <li>Neon Sign</li>
                                         <li>Contact Us</li>
-                                        <li>Grievance</li>
+                                       
                                     </ul>
                                 </div>
                             </div>
                             <div class="col-sm-3">
                                 <div class="col-sm-3 f-points">
-                                    <h3>Company Policies</h3>
+                                    <h3>Neon Sign</h3>
                                     <div class="links">
                                         <ul class="menu">
-                                            <li> Privacy & Policies</li>
-                                            <li>Pricing Policy</li>
-                                            <li>Refund and return policies</li>
-                                            <li>Disclaimer</li>
-                                            <li>Terms & Conditions</li>
+                                            <li> Business Specific</li>
+                                            <li>Home Decor</li>
+                                            <li>Event & Celebrations</li>
+                                            <li>Inspirational & Quotes</li>
+                                            <li>Custom Design</li>
+                                            <li> Seasonal Themes</li>
+                                            <li>Hobbies & Interests</li>
+                                            <li>Outdoors & Commercial</li>
+                                            <li>Artistic & Abstract</li>
+                                            <li>Religious & Cultural</li>
                                         </ul>
                                     </div>
                                 </div>
@@ -1199,10 +1204,10 @@
                                     <h3>Top Services</h3>
                                     <div class="links">
                                         <ul class="menu">
-                                            <li> Startup India Certification</li>
-                                            <li>Certifications</li>
-                                            <li> GST Works</li>
-                                            <li> Website Designing</li>
+                                            <li>Best Seller Products </li>
+                                            <li>Why Neon Attack</li>
+                                            <li> Illusion Lamps</li>
+                                            <li> Exclusive Products</li>
                                         </ul>
                                     </div>
                                 </div>
