--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                             <p class="price">
                                 From Rs. 1,049.00
                             </p>
-                            <button class="whatsapp-btn">click for customizations</button>
+                            <button class="whatsapp-btn-click">click for customizations</button>
                         </div>
                     </a>
                     <div class="product-card" data-price="1049" data-image="img/img2.jpg">
@@ -260,7 +260,7 @@
     <!-- <<<<<<<<<<<<whyneonplanner>>>> -->
     <div class="container">
         <div class="row">
-            <h1>Why <span>neon attack?</span></h1>
+            <h1>Why <span>Neon Planet?</span></h1>
             <div class="features">
                 <div class="col-sm-12 feature-main">
                     <div class="col-sm-6 feature-respo-main">
