--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                                 </ul> -->
                             </li>
                             <li>
-                                <a href="Neon Sign">Neon Sign <i class="fa navcticn fa-angle-down"
+                                <a href="">Neon Sign <i class="fa navcticn fa-angle-down"
                                         aria-hidden="true"></i></a>
                                 <ul class="dropdown service">
                                     <li><a href="startup.html">Business Specific</a></li>
