--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                                 </ul> -->
                             </li>
                             <li>
-                                <a href="">Neon Sign <i class="fa navcticn fa-angle-down"
-                                        aria-hidden="true"></i></a>
+                                Neon Sign <i class="fa navcticn fa-angle-down"
+                                        aria-hidden="true"></i>
                                 <ul class="dropdown service">
                                     <li><a href="startup.html">Business Specific</a></li>
                                     <li><a href="companyIn.html">Home Decor</a></li>
