--- a/index.html
+++ b/index.html
@@ -1248,7 +1248,7 @@
             <div class="footer-end">
                 <p>Copyright ©
                     <label for="" class="Footer-span">2024</label>
-                    <b>Lorem, ipsum dolor.</b>
+                    <b>Neon Planet</b>
                     . All Rights Reserved. | Design and Developed By
                     <a href="">TechBro24</a>
                 </p>
