--- a/auth-signin.html
+++ b/auth-signin.html
@@ -83,7 +83,7 @@
             <div class="navbar">
                 <div class="container">
                     <div class="logo">
-                        <img src="/ecommerce done/img/neon-planner-logo-removebg-preview.png" alt="">
+                        <img src="./img/neon-planner-logo-removebg-preview.png" alt="">
                     </div>
                     <div class="navbar-items">
                         <ul class="list-items">
