Updated HTML pages and removed productCount.text

--- a/Poster-custimzer.html
+++ b/Poster-custimzer.html
@@ -678,7 +678,7 @@
 
                 const link = document.createElement('a');
                 link.href = canvas.toDataURL('image/png');
-                link.download = `Shahzad_Img${index + 1}.png`;
+                link.download = `TechBro24_Img${index + 1}.png`;
                 link.click();
             };
         }
