Fixed line endings

--- a/Religious Cultural-ViewAll.html
+++ b/Religious Cultural-ViewAll.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>marketing-ViewAll</title>
+    <title>Religious-ViewAll</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
@@ -21,12 +21,12 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
 
     <!-- <<<<<<<<<<<<<css>>>>>>>>>> -->
-        <link rel="stylesheet" href="./styleeee2.css">
+        <link  id="themeStylesheet" rel="stylesheet" href="./styleeee2.css">
     <link rel="stylesheet" href="responsive.css">
 
     <style>
         .product-card  {
-            margin: 100px 50px;
+            margin-top: 100px;
         }
     </style>
 </head>
@@ -263,5 +263,6 @@
     <!-- <<<<<<<<<<<footerEnd >>>>>>>>>>>> -->
 
     <script src="./api/card-add-product.api.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
