--- a/index.html
+++ b/index.html
@@ -67,10 +67,9 @@
 
                                 </ul>
                                 <li><a href="AboutUs.html">About</a></li>
+                             <li><a href="auth-signup.html"><i class="fas fa-user-plus"></i></a></li>
                             </li>
                           
-                            <!-- <li><a href="portfolio.html">Portfolio</a></li> -->
-                            <li><a href="#" id="adminNav" style="display: none;">Admin</a></li>
                         </ul>
 
                     </div>
@@ -80,9 +79,7 @@
                         </div> -->
                         <!-- <p id="logoutBtn">Logout</p> -->
 
-                        <div class="auth-signup">
-                            <a href="./auth-signin.html"><i class="fas fa-user user-icon"></i></a>
-                        </div>
+                     
                         <div id="searchBtn">
                             <input class="form-control me-2" id="search" type="search" placeholder="Search"
                                 aria-label="Search">
@@ -99,7 +96,7 @@
     <!-- <<<<<<<<<<<<------NavbarEnd->>>>>>>> -->
     <div class="navigation">
         <ul>
-            <li class="active">
+            <li class="">
                 <a href="index.html">
                     <span class="icon">
                         <i class="fa fa-home"></i>
