--- a/Marketing & Advertising-viewAll.html
+++ b/Marketing & Advertising-viewAll.html
@@ -21,11 +21,12 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
 
     <!-- <<<<<<<<<<<<<css>>>>>>>>>> -->
-        <link rel="stylesheet" href="./styleeee2.css">
+        <link  id="themeStylesheet" rel="stylesheet" href="./styleeee2.css">
     <link rel="stylesheet" href="responsive.css">
     <style>
         .product-card  {
-            margin: 100px 50px;
+margin-top: 100px;
+         
         }
     </style>
 
@@ -264,7 +265,8 @@
     </div>
     <!-- <<<<<<<<<<<footerEnd >>>>>>>>>>>> -->
 
-
+      
     <script src="./api/card-add-product.api.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
