--- a/admin-product-add.html
+++ b/admin-product-add.html
@@ -286,16 +286,16 @@
                     <label for="category">Category</label>
                     <select id="category" name="category" required>
                         <option value="">-- Select Category --</option>
-                        <option value="Business Specific">Business Specific</option>
-                        <option value="Home Decor">Home Decor</option>
-                        <option value="Event & Celebrations">Event & Celebrations</option>
-                        <option value="Inspirational & Quotes">Inspirational & Quotes</option>
-                        <option value="Custom Design">Custom Design</option>
-                        <option value="Seasonal Themes">Seasonal Themes</option>
-                        <option value="Hobbies & Interests">Hobbies & Interests</option>
-                        <option value="Outdoor & Commercial">Outdoor & Commercial</option>
-                        <option value="Artistic & Abstract">Artistic & Abstract</option>
-                        <option value="Religious & Cultural">Religious & Cultural</option>
+                        <option value="Business Specific">UPCOMING FESTIVAL</option>
+                        <option value="Home Decor">Today’s Trending Poster</option>
+                        <option value="Event & Celebrations">National & International Days</option>
+                        <option value="Custom Design">Business Offers & Promotions</option>
+                        <option value="Seasonal Themes">Industry-Specific Posters</option>
+                        <option value="Inspirational & Quotes">Motivational & Quote Posters</option>
+                        <!-- <option value="Hobbies & Interests">1111</option> -->
+                        <option value="Outdoor & Commercial">Birthday & Anniversary Greetings</option>
+                        <option value="Artistic & Abstract">Reels & Social Media Thumbnails</option>
+                        <option value="Religious & Cultural">Weekend & Flash Sales</option>
                     </select>
                 </div>
             
