--- a/Poster-custimzer.html
+++ b/Poster-custimzer.html
@@ -192,11 +192,12 @@
 </head>
 
 <body>
+
 <!-- Header Start -->
 <div class="navbar">
     <div class="logo-toggle">
     <div class="logo">
-      <img src="./img/logo_techbro-removebg-preview.png" alt="Logo">
+     <a href="index.html"> <img src="./img/logo_techbro-removebg-preview.png" alt="Logo"></a>
     </div>
   
     <!-- Toggle Button (visible on small screens) -->
@@ -213,24 +214,24 @@
         <li>
           <a href="#">Templates <i class="fas fa-angle-down"></i></a>
           <ul class="dropdown">
-            <li><a href="#product-slider-wrapper22">Marketing & Advertising</a></li>
-            <li><a href="#product-slider-wrapper11">Business Instagram Story</a></li>
-            <li><a href="#product-slider-wrapper33">Month End Sale</a></li>
-            <li><a href="#inspirationalQuotes">Inspirational Quotes</a></li>
-            <li><a href="#product-slider-wrapper44">Creative Collection</a></li>
+            <li><a href="#product-slider-wrapper22">Upcoming Festival</a></li>
+            <li><a href="#product-slider-wrapper11">Today’s Trending Poster</a></li>
+            <li><a href="#product-slider-wrapper33">National & International Days</a></li>
+            <li><a href="#product-slider-wrapper44">Business Offers & Promotions</a></li>
+            <li><a href="#seasonalTheame">Industry-Specific Posters</a></li>
+            <li><a href="#inspirationalQuotes">Motivational & Quote Posters</a></li>
+            <li><a href="#outdoorAndCommercial">Birthday & Anniversary Greetings</a></li>
+            <li><a href="#artistAndAbstract">Reels & Social Media Thumbnails</a></li>
+            <li><a href="#ReligiousCultural">Weekend & Flash Sales</a></li>
           </ul>
         </li>
+    
+        <li><a href="#product-slider-wrapper22">Upcoming Festival</a></li>
         <li><a href="AboutUs.html">About</a></li>
-        <li><a href="Blog.html">Blog</a></li>
-        <li><a href="Pricing.html">Pricing</a></li>
       </ul>
     
     </div>
-    <!-- <div class="auth-buttons">
-        <a href="auth-signin.html" class="login">Login</a>
-        <a href="auth-signup.html" class="signup">Sign Up</a>
-      </div>
-    -->
+   
   </div>
   <!-- Header End -->
 
@@ -310,65 +311,66 @@
     <div id="posters" class="posters-container"></div>
 
 
-       <!-- <<<<<<<<<<<footer >>>>>>>>>>>> -->
-        <footer class="custom-footer">
-            <div class="footer-container">
-                <div class="footer-row">
-                    <!-- Useful Links Section -->
-                    <div class="footer-col">
-                        <h3 class="footer-heading">Useful Links</h3>
-                        <ul class="footer-menu">
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">Customize</a></li>
-                            <li><a href="#">Contact Us</a></li>
-                        </ul>
-                    </div>
-                    <!-- Make Posts Section -->
-                    <div class="footer-col">
-                        <h3 class="footer-heading">Make Posts</h3>
-                        <ul class="footer-menu">
-                            <li><a href="#product-slider-wrapper22">Marketing & Advertising</a></li>
-                            <li><a href="#product-slider-wrapper11">Business Instagram Story</a></li>
-                            <li><a href="#product-slider-wrapper33">Month End Sale</a></li>
-                            <li><a href="#inspirationalQuotes">Month End Offer</a></li>
-                            <li><a href="#product-slider-wrapper44">Creative Collection</a></li>
-                            <li><a href="#seasonalTheame">Weekend Offers</a></li>
-                            <li><a href="#outdoorAndCommercial">Weekend Offer</a></li>
-                            <li><a href="#artistAndAbstract">Business Anniversary</a></li>
-                            <li><a href="#ReligiousCultural">Super Scale Banner</a></li>
-                        </ul>
-                    </div>
-                    <!-- Top Services Section -->
-                    <div class="footer-col">
-                        <h3 class="footer-heading">Top Services</h3>
-                        <ul class="footer-menu">
-                            <li><a href="#">Best Seller Products</a></li>
-                            <li><a href="#">Exclusive Products</a></li>
-                        </ul>
-                    </div>
-                    <!-- Contact & Social Section -->
-                    <div class="footer-col">
-                        <img src="./img/logo_techbro-removebg-preview.png" alt="TechBro24 Logo" class="footer-logo">
-                        <ul class="social-links">
-                            <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-                            <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
-                            <li><a href="https://www.linkedin.com" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
-                            <li><a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube"></i></a></li>
-                        </ul>
-                        <div class="footer-contact">
-                            <p><i class="fas fa-phone"></i> <a href="tel:+917597722920">+91 75977 22920</a></p>
-                            <p><i class="fas fa-envelope"></i> <a href="mailto:info@techbro24.com">info@techbro24.com</a></p>
+         <!-- <<<<<<<<<<<footer >>>>>>>>>>>> -->
+            <footer class="custom-footer">
+                <div class="footer-container">
+                    <div class="footer-row">
+                        <!-- Useful Links Section -->
+                        <div class="footer-col">
+                            <h3 class="footer-heading">Useful Links</h3>
+                            <ul class="footer-menu">
+                                <li><a href="index.html">Home</a></li>
+                                <li><a href="Poster-custimzer.html">Customize</a></li>
+                                <li><a href="AboutUs.html">Contact Us</a></li>
+                            </ul>
+                        </div>
+                        <!-- Make Posts Section -->
+                        <div class="footer-col">
+                            <h3 class="footer-heading">Make Posts</h3>
+                            <ul class="footer-menu">
+                              <li><a href="#product-slider-wrapper22">Upcoming Festival</a></li>
+                              <li><a href="#product-slider-wrapper11">Today’s Trending Poster</a></li>
+                              <li><a href="#product-slider-wrapper33">National & International Days</a></li>
+                              <li><a href="#product-slider-wrapper44">Business Offers & Promotions</a></li>
+                              <li><a href="#seasonalTheame">Industry-Specific Posters</a></li>
+                              <li><a href="#inspirationalQuotes">Motivational & Quote Posters</a></li>
+                              <li><a href="#outdoorAndCommercial">Birthday & Anniversary Greetings</a></li>
+                              <li><a href="#artistAndAbstract">Reels & Social Media Thumbnails</a></li>
+                              <li><a href="#ReligiousCultural">Weekend & Flash Sales</a></li>
+                            </ul>
+                        </div>
+                        <!-- Top Services Section -->
+                        <div class="footer-col">
+                            <h3 class="footer-heading">Top Services</h3>
+                            <ul class="footer-menu">
+                              <li><a href="#product-slider-wrapper44">Business Offers & Promotions</a></li>
+                              <li><a href="#seasonalTheame">Industry-Specific Posters</a></li>
+                              <li><a href="#inspirationalQuotes">Motivational & Quote Posters</a></li>
+                            </ul>
+                        </div>
+                        <!-- Contact & Social Section -->
+                        <div class="footer-col">
+                            <img src="./img/logo_techbro-removebg-preview.png" alt="TechBro24 Logo" class="footer-logo">
+                            <ul class="social-links">
+                                <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+                                <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                                <li><a href="https://www.linkedin.com" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+                                <li><a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube"></i></a></li>
+                            </ul>
+                            <div class="footer-contact">
+                                <p><i class="fas fa-phone"></i> <a href="tel:+917597722920">+91 75977 22920</a></p>
+                                <p><i class="fas fa-envelope"></i> <a href="mailto:info@techbro24.com">info@techbro24.com</a></p>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="footer-bottom">
-                <p>Copyright © <span class="footer-year">2025</span> <b>Techbro24</b>. All Rights Reserved. | Designed and Developed by 
-                    <a href="https://www.techbro24.com/" target="_blank">TechBro24</a>
-                </p>
-            </div>
-        </footer>
-        <!-- <<<<<<<<<<<footerEnd >>>>>>>>>>>> -->
+                <div class="footer-bottom">
+                    <p>Copyright © <span class="footer-year">2025</span> <b>Techbro24</b>. All Rights Reserved. | Designed and Developed by 
+                        <a href="https://www.techbro24.com/" target="_blank">TechBro24</a>
+                    </p>
+                </div>
+            </footer>
+       <!-- <<<<<<<<<<<<<<<<<footer>>>>>>>>>>>>>>>>>> -->
 
             <script src="script.js"></script>
     <script>
