--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 
 <!-- Trending Days Posters -->
 <section class="festival-section">
-  <div class="festival-label">Today’s Trending Poster, Just in Time</div>
+  <div class="festival-label">Today’s Trending Poster</div>
   <div class="festival-heading">
       <h1>Be Relevant. Be Consistent.</h1>
       <p>Posters for each day’s trending event — World Days, Awareness Days & more, to keep your brand always active.
